# terraform-provider-okta

./: .env.sample  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  GNUmakefile  Gopkg.toml  Jenkinsfile  LICENSE  Makefile  README.md  RELEASING.md  REQUIREMENTS.txt  TODO.md  VCR_FIXES.md  VCR_TEST_LOG_ISSUE_2271.md  ]:wq  dependabot.yml  docker-compose.yml  go.mod  go.sum  main.go  provider.go  release-please-config.json  resource_swa_app.go  resource_swa_app_test.go  service.json  test-vcr.sh  test_exempt_zone.tf  tools.go
.circleci/: config.yml
.generator/: README.md  config_full.yaml  pyproject.toml
.generator/examples/: config.yaml
.generator/go-generator/: go.mod
.generator/go-generator/cmd/generator/: main.go
.generator/go-generator/internal/config/: config.go
.generator/go-generator/internal/formatter/: formatter.go
.generator/go-generator/internal/generator/: generator.go
.generator/go-generator/internal/openapi/: openapi.go
.generator/go-generator/internal/types/: types.go
.generator/go-generator/templates/: data_source.go.tmpl  resource.go.tmpl  resource_test.go.tmpl
.generator/src/generator/: __init__.py  cli.py  formatter.py  openapi.py  setup.py  type.py  utils.py
.generator/src/generator/templates/: base_resource.j2  create_method.j2  delete_method.j2  read_method.j2  resource_example.j2  resource_import_example.j2  resource_test.j2  schema.j2  types.j2  update_method.j2
.generator/src/generator/templates/data_source/: base.j2  read.j2  schema.j2  state.j2  types.j2
okta/: app.go  (+586 more)
(+4619 files in other folders)
